Add foodlevelchange passive trigger